# -EDD-Proyecto1_202203009

./: Manual Técnico.md  Principal.cpp  README.md  Usuario.cpp  Usuario.h  listaEnlazada.cpp  listaEnlazada.h  oficial.cpp  prueba.cpp  publicaciones.json  publicaciones3.json  publicacionesfase2.json  solicitudes.json  usuarios.json
Fase 1/: Manual Técnico.md  Manual de Usuario.md  Usuario.cpp
Fase 1/encabezados/: ListaEnlazada.h  Usuario.h
Fase 2/: ListaDoblePublicacionesGlobal.cpp  ListaEnlazada.cpp  ListaEnlazadaAmigos.cpp  ListaEnlazadaSimpleMayorPublicaciones.cpp  ListaEnlazadaSimpleMenosAmigos.cpp  ListaRelacionesCompleto.cpp  ListaSimpleSolicitudes.cpp  Manual Técnico.md  Manual de Usuario.md  MatrizDispersa.cpp  Nodo.cpp  NodoMatriz.cpp  NodoMenosAmigos.cpp  NodoPublicaciones.cpp  NodoRelacion.cpp  PilaSolicitudes.cpp  Publicacion.cpp  Relacion.cpp  Solicitud.cpp  Usuario.cpp  oficial.cpp  publicaciones.json  usuarios.json
Fase 2/Fase2EDD/: CMakeLists.txt  Oficial.cpp  bstpublicaciones.cpp  bstpublicaciones.h  gestorcomentarios.cpp  gestorcomentarios.h  interfazprincipal.cpp  interfazprincipal.h  interfazprincipal.ui  listadoble.cpp  listadoble.h  listasimple.cpp  listasimple.h  main.cpp  moduloadministrador.cpp  moduloadministrador.h  moduloadministrador.ui  moduloentrada.cpp  moduloentrada.h  moduloentrada.ui  nuevapublicacion.cpp  pila.cpp  pila.h  registrousuario.cpp  usuario.cpp  usuario.h
Fase 2/Fase2EDD/EstructurasAdmin/: avlusuarios.cpp  avlusuarios.h  listaadaycenteglobal.cpp  listaadaycenteglobal.h  listadoblepublicacionesglobal.cpp  listadoblepublicacionesglobal.h  matrizadyacenteglobal.cpp  matrizadyacenteglobal.h  ventanaemergente.cpp  ventanaemergente.h
Fase 2/Fase2EDD/EstructurasUsuario/: listadobleusuariosdisponibles.cpp  listadobleusuariosdisponibles.h  matrizadyacenterelacion.cpp  matrizadyacenterelacion.h  matrizdispersaamigos.cpp  matrizdispersaamigos.h
Fase 2/Fase2EDD/Publicaciones/: publicacion.cpp  publicacion.h
Fase 2/Fase2EDD/Publicaciones/Comentarios/: arbolbcomentarios.cpp  arbolbcomentarios.h  comentario.cpp  comentario.h  gestorcomentarios.ui  listadoblecomentariosaux.cpp  listadoblecomentariosaux.h  paginab.h
Fase 2/Fase2EDD/TablasAdmin/: buttondelegatetablaadmin.cpp  buttondelegatetablaadmin.h
Fase 2/Fase2EDD/TablasModUsuario/: buttondelegateeliminardef.cpp  buttondelegateenviadas.cpp  buttondelegatesolicitudes.cpp  buttondelegatesolicitudes.h  modificarusuariodialog.cpp
Fase 2/Fase2EDD[TablasModAdmin/: buttondelegatemostrarnormal.h
Fase 2/output/: grafico_publicaciones_global.dot.dot  lista_doble_publicaciones.dot  matriz_amistades.dot  usuarios.dot
Fase 3/: ListaDoblePublicaciones.cpp  Manual Técnico.md  Manual de Usuario.md  NodoPublicacion.cpp
Fase 3/Fase2EDD/: CMakeLists.txt  Oficial.cpp  bstpublicaciones.cpp  bstpublicaciones.h  gestorcomentarios.ui  listadoble.cpp  listadoble.h  listasimple.h  nodo.h  nuevapublicacion.h  nuevapublicacion.ui  pila.cpp  registrousuario.cpp  registrousuario.h  registrousuario.ui  usuario.cpp
Fase 3/Fase2EDD/EstructurasAdmin/: avlusuarios.cpp  listadoblepublicacionesglobal.h
Fase 3/Fase2EDD/EstructurasUsuario/: matrizadyacenciarelaciones.cpp  matrizadyacenciarelaciones.h  matrizdispersaamigos.cpp
Fase 3/Fase2EDD[TablasModAdmin/: buttondelegatemostrarnormal.cpp
encabezados/: Usuario.h
output/: cola_solicitudes_enviadas.dot  grafico_publicaciones_global.dot.dot  lista_doble_publicaciones.dot  matriz_amistades.dot  pila_solicitudes_recibidas.dot  usuarios.dot
pruebas/: avl_usuarios.dot  grafoGlobal.dot  listaAdyacencia.dot  listaAdyacenciaGlobal.dot  listaAdyacenteLista.dot  listaAdyacenteListaEnlazada.dot  lista_publicaciones.dot  matrizRelacionRemitente.dot  matrizRelacionUsuarioConectado.dot  matriz_adyacente_usuario.png.dot
(+14 files in other folders)
